--- a/style.css
+++ b/style.css
@@ -25,10 +25,15 @@
     
 }
 .icon{
-    border: 5px solid green; border-radius: 2px 2px;
+    border: 5px solid rgb(133, 180, 147); border-radius: 3px 3px;
     cursor: pointer;
     
 }
 .Web{
     color: darkgoldenrod;
+}
+.Story{
+    padding: 20px;
+    margin-top: 400px;
+    
 }
